--- a/templates/index.html
+++ b/templates/index.html
@@ -78,15 +78,15 @@ function initMap() {
     }, 300); // Set the timeout to 300 ms or any other value suitable for your use case
   });
 
-  document.getElementById('toggle-pois').addEventListener('click', togglePOIs);
-
-  
   const searchBox = document.getElementById("search-box");
   searchBox.addEventListener("keydown", (event) => {
     if (event.key === "Enter") {
       searchLocation(searchBox.value);
     }
   });
+
+  document.getElementById('toggle-pois').addEventListener('click', togglePOIs);
+  document.getElementById('burger-menu').addEventListener('click', toggleMenu);
 
   
 }
@@ -327,7 +327,12 @@ async function searchLocation(location) {
 
   map.set('styles', newStyles);
 }
-   
+
+function toggleMenu() {
+  const menuItems = document.getElementById('menu-items');
+  menuItems.style.display = menuItems.style.display === 'none' ? 'flex' : 'none';
+}
+    
 
   </script>
   <style>
@@ -463,13 +468,17 @@ async function searchLocation(location) {
     padding: 5px;
     border-radius: 3px;
     cursor: pointer;
+    margin-top: 3px;
   }
   
-  #control-panel button:hover {
-    background-color: #dddddd;
+  #burger-menu {
+    font-size: 18px;
   }
-
-
+  
+  #menu-items {
+    display: none;
+    flex-direction: column;
+  }
     
 </style>
 
@@ -479,7 +488,10 @@ async function searchLocation(location) {
   <div id="main-container">
     <div id="map-container">
       <div id="control-panel">
-        <button id="toggle-pois">Toggle POIs</button>
+        <button id="burger-menu">&#9776;</button>
+          <div id="menu-items" style="display: none;">
+          <button id="toggle-pois">Toggle POIs</button>
+        </div>
       </div>
 
       <div id="map"></div>
