--- a/templates/index.html
+++ b/templates/index.html
@@ -78,15 +78,15 @@ function initMap() {
     }, 300); // Set the timeout to 300 ms or any other value suitable for your use case
   });
 
+  document.getElementById('toggle-pois').addEventListener('click', togglePOIs);
+
+  
   const searchBox = document.getElementById("search-box");
   searchBox.addEventListener("keydown", (event) => {
     if (event.key === "Enter") {
       searchLocation(searchBox.value);
     }
   });
-
-  document.getElementById('toggle-pois').addEventListener('click', togglePOIs);
-  document.getElementById('burger-menu').addEventListener('click', toggleMenu);
 
   
 }
@@ -135,7 +135,7 @@ function populateTableWithVisibleStreets() {
 }
 
 
-function populateTable(streetNames) {
+async function populateTable(streetNames) {
   const table = document.getElementById("info-table");
 
   // Clear the table before populating it
@@ -143,7 +143,7 @@ function populateTable(streetNames) {
     table.deleteRow(1);
   }
 
-  streetNames.forEach(async (streetName) => {
+  for (const streetName of streetNames) {
     const row = table.insertRow();
     const cell1 = row.insertCell();
     cell1.textContent = streetName;
@@ -169,18 +169,20 @@ function populateTable(streetNames) {
         // Center the map on the marker
         map.setCenter(latLng);
       } catch (error) {
-        console.error(`Error placing marker for ${streetName}:`, error);
+		console.error(`Error placing marker for ${streetName}:`, error);
       }
     });
 
     // Fetch and display the Street View image date
     await populateRowWithStreetViewImageDate(row, streetName);
-  });
+
+  }
 }
 
 
 
 async function populateRowWithStreetViewImageDate(row, streetName) {
+  await sleep(250); // Adjust the delay as needed (500 milliseconds in this example)
   try {
     const streetLatLng = await geocodeStreet(streetName);
     const latLng = new google.maps.LatLng(streetLatLng.lat, streetLatLng.lng);
@@ -204,7 +206,7 @@ async function populateRowWithStreetViewImageDate(row, streetName) {
 
 
 
-async function geocodeStreet(streetName, apiKey, maxRetries = 5, retryDelay = 500) {
+async function geocodeStreet(streetName, apiKey, maxRetries = 5, retryDelay = 200) {
   const geocoder = new google.maps.Geocoder();
   const request = {
     address: streetName,
@@ -231,8 +233,6 @@ async function geocodeStreet(streetName, apiKey, maxRetries = 5, retryDelay = 50
     geocodeWithRetry(resolve, reject, maxRetries, retryDelay);
   });
 }
-
-
 
     
 function clearTable() {
@@ -303,7 +303,7 @@ async function searchLocation(location) {
       if (status === "OK") {
         const latLng = results[0].geometry.location;
         map.setCenter({ lat: latLng.lat(), lng: latLng.lng() });
-        map.setZoom(17);
+        map.setZoom(18);
       } else {
         console.error(`Search failed for ${location}: ${status}`);
       }
@@ -327,13 +327,10 @@ async function searchLocation(location) {
 
   map.set('styles', newStyles);
 }
-
-function toggleMenu() {
-  const menuItems = document.getElementById('menu-items');
-  menuItems.style.display = menuItems.style.display === 'none' ? 'flex' : 'none';
+   
+function sleep(ms) {
+  return new Promise((resolve) => setTimeout(resolve, ms));
 }
-    
-
   </script>
   <style>
    html, body {
@@ -468,17 +465,13 @@ function toggleMenu() {
     padding: 5px;
     border-radius: 3px;
     cursor: pointer;
-    margin-top: 3px;
   }
   
-  #burger-menu {
-    font-size: 18px;
+  #control-panel button:hover {
+    background-color: #dddddd;
   }
-  
-  #menu-items {
-    display: none;
-    flex-direction: column;
-  }
+
+
     
 </style>
 
@@ -488,10 +481,7 @@ function toggleMenu() {
   <div id="main-container">
     <div id="map-container">
       <div id="control-panel">
-        <button id="burger-menu">&#9776;</button>
-          <div id="menu-items" style="display: none;">
-          <button id="toggle-pois">Toggle POIs</button>
-        </div>
+        <button id="toggle-pois">Toggle POIs</button>
       </div>
 
       <div id="map"></div>
@@ -518,14 +508,13 @@ function toggleMenu() {
   </p>
   <h3>How to use:</h3>
   <ol>
-    <li>Open the web app in your browser. You will see a Google Map view on the left side of the screen and an initially empty data table on the right side.</li>
-    <li>Navigate the map as desired. When you reach zoom level 17 or higher, the app will automatically populate the data table with the visible street names and their latest Street View image date.</li>
-    <li>If there is no Street View imagery available for a specific street, the table will display "No imagery here" in the date column.</li>
+    <li>You will see a Google Map view on the left side of the screen and an initially empty data table on the right side.</li>
+    <li>When you reach zoom level 17 or higher, the app will populate the data table with the visible street names and their latest Street View image date.</li>
+    <li>If there is no StreetView imagery available for a street, "No imagery here" will appear in the date column.</li>
     <li>To view the location of a particular street on the map, click on the street name in the data table. A marker will appear on the map.</li>
     <li>Click on a location on the map to view the Street View image date for that spot in a popup. If there is no Street View imagery available for the clicked location, the popup will display "No imagery here".</li>
-    <li>Double-click on the map to zoom in without triggering the popup.</li>
-    <li>To clear the table and remove all markers from the map, zoom out.</li>
-    <li>As you pan and zoom the map, the data table will update automatically.</li>
+    <li>You can also use the search box to search for a specific location.</li>
+    <li>Use the 'Toggle POIs' button for a cleaner map view</li>
   </ol>
 </div>
 
