--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,10 @@
     </div>
     <div id="search-container">
       <input id="search-box" type="text" placeholder="Search for a location">
+        <div id="progress-container">
+          <progress id="progress-bar" value="0" max="100"></progress>
+          <span id="progress-text">populating table...</span>
+        </div>
       <div id="info-table-container">
         <table id="info-table">
           <tr>
