remove link and update title

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 </head>
   
 <body onload="initMap()">
-  <div id="header">Google Streetview Dates Viewer</div>
+  <div id="header">Google Streetview Info</div>
   <div id="main-container">
     <div id="map-container">
       <div id="control-panel">
